src/objects/Order_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Allowance_Charge__c</fullName>
        <label>Allowance Charge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Done__c</fullName>
        <label>Done</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Misc_Charge__c</fullName>
        <label>Miscellaneous Charges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Charges__c</fullName>
        <label>Miscellaneous Charges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>Credit Card Token from Web</description>
        <label>Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webstack_ID__c</fullName>
        <label>Webstack ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webstack_Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Webstack Order ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Order Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Webstack_Order_ID__c</columns>
        <columns>Ship_To__c</columns>
        <columns>Payment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Comment__c</columns>
        <columns>Webstack_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OS-{000000}</displayFormat>
        <label>Order Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>